--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ keras
 numpy
 streamlit==0.52.1
 seaborn==0.11.1
-tweepy
 textblob==0.15.3
 flask
 pandas
@@ -14,4 +13,6 @@ statsmodels
 yfinance
 alpha_vantage==2.3.1
 gunicorn
-https://pypi.anaconda.org/berber/simple/tweet-preprocessor/0.5.0/tweet-preprocessor-0.5.0.tar.gz
+htmldate
+finvader
+aiohttp
