--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
-tensorflow
+# tensorflow
 nltk>=3.5
-keras
+# keras
 numpy
 seaborn==0.11.1
 textblob==0.15.3
 flask
 pandas
 matplotlib
-scikit_learn
+scikit-learn
 statsmodels
 yfinance
 alpha_vantage==2.3.1
 gunicorn
 htmldate
 finvader
+newspaper3k
 aiohttp
 flask_sqlalchemy
